<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pl.edu.agh.kis.pz1</groupId>
  <artifactId>multi-module</artifactId>
  <version>1.0</version>

  <name>Przyklad - aplikacja wielomodulowa</name>
  <packaging>pom</packaging>

  <!-- Dodane przez pskrzynski -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
    <version.surefire.plugin>3.2.2</version.surefire.plugin>
    <project.testresult.directory>${project.build.directory}/surefirereports</project.testresult.directory>
    <sonar.jacoco.reportPaths>${project.testresult.directory}/coverage/jacoco/jacoco.exec</sonar.jacoco.reportPaths>
    <sonar.junit.reportsPath>${project.testresult.directory}</sonar.junit.reportsPath>
    <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
    <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
  </properties>

  <modules>
      <module>utils</module>
      <module>main</module>
  </modules>

  <dependencyManagement>
      <dependencies>

          <dependency>
              <groupId>pl.edu.agh.kis.pz1</groupId>
              <artifactId>main</artifactId>
              <version>${project.version}</version>
          </dependency>
          <dependency>
              <groupId>pl.edu.agh.kis.pz1</groupId>
              <artifactId>utils</artifactId>
              <version>${project.version}</version>
          </dependency>
          <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
          <dependency>
              <groupId>org.mockito</groupId>
              <artifactId>mockito-all</artifactId>
              <version>2.0.2-beta</version>
              <scope>test</scope>
          </dependency>
      </dependencies>
  </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>3.11.0.3922</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.2</version>
                    <configuration>

                        <!-- Default configuration for all reports -->
                        <noqualifier>all</noqualifier>
                        <destDir>javadoc</destDir>
                    </configuration>
                    <executions>
                        <execution>
                            <id>aggregate</id>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                            <configuration>
                                <!-- Specific configuration for the aggregate report -->
                                <reportOutputDirectory>${user.dir}/documents</reportOutputDirectory>
                                <destDir>javadoc</destDir>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
